# mlb-standings-app

./: .gitignore  README.md  pyproject.toml  scratch_notebook.ipynb
.streamlit/: config.toml
app/: main.py
services/: standings.py
